fix text animation overflow issue

--- a/responsive.css
+++ b/responsive.css
@@ -93,6 +93,11 @@
 }
 
 @media (max-width: 992px) {
+
+  section {
+    padding: 70px 0;
+  }
+
   .hero-wrapper {
     flex-direction: column;
     align-items: center;
@@ -168,9 +173,22 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
+  .about-us-hero {
+    padding: 80px 0;
+  }
+
+  .about-us-hero h1 {
+    font-size: 48px;
+    line-height: 60px;
+}
+
 }
 
 @media (max-width: 768px) {
+  section {
+    padding: 64px 0;
+  }
+
   header {
     gap: 24px;
     padding: 18px 0 24px;
@@ -261,6 +279,23 @@
   .footer-copyright {
     padding: 12px 16px;
   }
+
+  .about-us-hero h1 {
+    font-size: 36px;
+    line-height: 60px;
+}
+
+.text-container span {
+  line-height: 75px;
+}
+.text-container { 
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.word {
+  gap: 12px;
+}
 }
 
 @media (max-width: 576px) {
@@ -308,6 +343,11 @@
   .features-card-wrapper {
     grid-template-columns: 325px;
     justify-content: center;
+    margin-top: 42px;
+  }
+
+  .how-it-works-step-wrapper {
+    margin-top: 42px;
   }
 
   .features-card {
