--- a/style.css
+++ b/style.css
@@ -955,7 +955,7 @@ header {
 }
 
 .message-form-control {
-  padding-top: 20px;
+  height: 80px;
 }
 
 .form-control input {
@@ -1024,7 +1024,6 @@ header {
   color: var(--gray);
   font-size: 18px;
   font-weight: 400;
-  padding-bottom: 6px;
   resize: none;
   font-family: "Asap";
 }
@@ -1250,7 +1249,7 @@ footer {
 /* animations */
 .text-container {
   display: flex;
-  gap: 50px;
+  column-gap: 50px;
   opacity: 0;
   transform: translateX(-50px);
   transition: opacity 1s ease-out, transform 1s ease-out;
